--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Emblema+One&display=swap');
 
 body {
     box-sizing: border-box;
@@ -20,6 +21,12 @@ body {
     margin: 0 auto;
     border-radius: 20px;
     background-color: whitesmoke;
+}
+
+#time {
+    /*margin:122px 110px ;*/
+    font-family: 'Emblema One', cursive;
+    font-size: 4em;
 }
 
 #timer-input {
