changed color of button

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ input {
 
 button {
     color: ghostwhite;
-    background-color: #95d5b2;
+    background-color: #219ebc;
     border-radius: 10px;
     margin: 0px 8.984px;
 }
